--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 ---
-layout: home
+layout: archive
 author_profile: true
 ---
+
+<div class="grid__wrapper">
+    {% for post in site.posts %}
+      {% include archive-single.html type="grid" %}
+    {% endfor %}
+  </div>
